--- a/src/SharedComponents/Header.css
+++ b/src/SharedComponents/Header.css
@@ -1,8 +1,14 @@
 .page-header {
     border-bottom: 1px solid #ccc;
-    height: 60px;
+    height: min-content;
 }
 
-.columns {
-    margin: 0;
+.logout {
+    user-select: none;
+    text-decoration: none;
+    color: #4a4a4a;
+}
+
+.logout:hover {
+    text-decoration: underline;
 }
